# elm-format

./: .dockerignore  .ghci  .gitattributes  .gitignore  .gitpod.yml  .hlint.yaml  .travis.yml  BuildFromSource.hs  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.wine  HLint.hs  LICENSE  PUBLISHING.md  README.md  Setup.hs  Shakefile.hs  TODO.md  TestModule.elm  appveyor.yml  build-package.sh  build.sh  cabal.config  cabal.project  cabal.project.freeze  changelog  ci.sh  default.nix  elm-compiler.cabal  elm-format.cabal  hie.yaml  install_system.sh  new-parser-2021-notes.md  notes.md  package.yaml  pkgs.nix  release.nix  shell.nix  showspace  (+1 more)
.plan.nix/: avh4-lib.nix  elm-format-lib.nix  elm-format-markdown.nix  elm-format-test-lib.nix  elm-format.nix
Shakefile/: build-elm-format.cabal  build.cabal  package.yaml
Shakefile/src/: Main.hs
Shakefile/src/Shakefiles/: Dependencies.hs  Haskell.hs  ListFiles.hs  NestedCheckout.hs  NixBuild.hs  Prelude.hs  Shellcheck.hs  Signature.hs
Shakefile/src/Shakefiles/ElmFormat/: IntegrationTests.hs
Shakefile/src/Shakefiles/Haskell/: Hpc.hs
avh4-lib/: avh4-lib.cabal  package.yaml
avh4-lib/src/CommandLine/: Filesystem.hs  World.hs
avh4-lib/src/CommandLine/World/: IO.hs  RealWorld.hs
avh4-lib/src/Data/: Coapplicative.hs  Fix.hs  Indexed.hs  ReversedList.hs
avh4-lib/src/Data/Either/: Extra.hs
avh4-lib/src/Data/List/: Extra.hs
avh4-lib/src/Data/Text/: Extra.hs
avh4-lib/src/Elm/: Utils.hs
avh4-lib/test/Data/Either/: ExtraSpec.hs  ExtraTest.hs
avh4-lib/test/Data/List/: ExtraSpec.hs  ExtraTest.hs
avh4-lib/test/Data/Text/: ExtraSpec.hs  ExtraTest.hs
elm-format-lib/: elm-format-lib.cabal  package.yaml
elm-format-lib/src/: Box.hs  ElmVersion.hs  Indent.hs
elm-format-lib/src/AST/: Helpers.hs  Listing.hs  MatchReferences.hs  Module.hs  Structure.hs  V0_16.hs
elm-format-lib/src/Box/: BlockAdapter.hs
elm-format-lib/src/CommandLine/: InfoFormatter.hs  Program.hs  ResolveFiles.hs  TransformFiles.hs
elm-format-lib/src/Data/: ReversedList.hs  Utf8.hs
elm-format-lib/src/Elm/: Float.hs  String.hs
elm-format-lib/src/ElmFormat/: ImportInfo.hs  KnownContents.hs  Normalize.hs  Parse.hs
elm-format-lib/src/ElmFormat/AST/: BinaryOperatorPrecedence.hs  PatternMatching.hs  PublicAST.hs  Shared.hs  TransformChain.hs
elm-format-lib/src/ElmFormat/AST/PublicAST/: Comment.hs  Config.hs  Core.hs  Expression.hs  MaybeF.hs  Module.hs  Pattern.hs  Reference.hs  Type.hs
elm-format-lib/src/ElmFormat/Render/: Box.hs  ByteStringBuilder.hs  ElmStructure.hs  Markdown.hs  Text.hs
elm-format-lib/src/Parse/: Binop.hs  Comments.hs  Common.hs  Declaration.hs  Expression.hs  Helpers.hs  IParser.hs  Literal.hs  Markdown.hs  Module.hs  Number.hs  Parse.hs  ParsecAdapter.hs  Pattern.hs  Primitives.hs  String.hs  Type.hs  Variable.hs  Whitespace.hs
elm-format-lib/src/Parse/ParsecAdapter/: Message.hs
elm-format-lib/src/Reporting/: Annotation.hs  Region.hs  Result.hs
elm-format-lib/src/Reporting/Annotation/: New.hs
elm-format-lib/src/Reporting/Error/: Docs.hs  Helpers.hs  Syntax.hs
elm-format-lib/src/Text/: Parsec.hs
elm-format-lib/src/Text/Parsec/: Char.hs  Combinator.hs  Error.hs  Indent.hs  Pos.hs  Prim.hs
elm-format-lib/src/Text/ParserCombinators/Parsec/: Char.hs  Combinator.hs
elm-format-lib/src/Text/PrettyPrint/Avh4/: Block.hs  Indent.hs
elm-format-lib/test/: BoxSpec.hs  BoxTest.hs  IndentSpec.hs  IndentTest.hs
elm-format-lib/test/AST/: MatchReferencesSpec.hs  MatchReferencesTest.hs
elm-format-lib/test/ElmFormat/: ImportInfoSpec.hs  ImportInfoTest.hs  NormalizeSpec.hs  NormalizeTest.hs
elm-format-lib/test/ElmFormat/AST/: BinaryOperatorPrecedenceSpec.hs  BinaryOperatorPrecedenceTest.hs
elm-format-lib/test/ElmFormat/Render/: BoxTest.hs  ElmStructureSpec.hs  ElmStructureTest.hs
elm-format-lib/test/Parse/: ExpressionSpec.hs  ExpressionTest.hs  HelpersSpec.hs  HelpersTest.hs  LiteralSpec.hs  LiteralTest.hs  PatternSpec.hs  PatternTest.hs  TestHelpers.hs  TestHelpersSpec.hs  TestHelpersTest.hs  TypeSpec.hs  TypeTest.hs
elm-format-lib/test/Text/PrettyPrint/Avh4/: BlockSpec.hs  IndentSpec.hs
elm-format-markdown/: LICENSE  elm-format-markdown.cabal  package.yaml
elm-format-markdown/Cheapskate/: Inlines.hs  Parse.hs  ParserCombinators.hs  Types.hs  Util.hs
elm-format-markdown/tests/Blockquotes/: Indents.markdown~
elm-format-markdown/tests/Code/: FenceMatching.html  FenceMatching.markdown  FencedCodeBlocks.html  IndentedFences.markdown  ListBreakAfter.markdown
elm-format-markdown/tests/HTML/: Inline.html
elm-format-markdown/tests/Headers/: ATX.html
elm-format-markdown/tests/Links/: AutoLinks.html
elm-format-markdown/tests/Lists/: Indents.html  TightAndLoose.html  TightLooseBlockquote.html
elm-format-markdown/tests/Misc/: Laziness.html  Transitions.markdown
elm-format-markdown/tests/Original/: Backslash_escapes.html  Inline_HTML_Simple.html  Links_reference_style.html  Markdown_Documentation_Basics.html  Strong_and_em_together.html
elm-format-test-lib/: LICENSE  elm-format-test-lib.cabal  package.yaml
elm-format-test-lib/src/CommandLine/: TestWorld.hs
elm-format-test-lib/src/Data/: FileTree.hs
elm-format-test-lib/src/TestWorld/: Stdio.hs
elm-format-test-lib/test/Data/: FileTreeSpec.hs  FileTreeTest.hs
markdown/: Cheapskate.hs  Makefile  README.markdown  TODO  cheapskate.cabal
markdown/Cheapskate/: Inlines.hs  Parse.hs  ParserCombinators.hs  Types.hs  Util.hs
markdown/man/: Makefile  cheapskate.1.md
markdown/man/man1/: cheapskate.1
markdown/tests/Code/: IndentedFences.html
markdown/tests/Emphasis/: NestedEmphAndStrong.html  NestedEmphAndStrong.markdown  Pathological.html  Punctuation.html
markdown/tests/Headers/: Setext.markdown
markdown/tests/Links/: BareLinks.html  BareLinks.markdown
markdown/tests/Lists/: Indents.markdown  Sublists.markdown  TightAndLoose.markdown
markdown/tests/Misc/: BackslashEscapes.markdown  LineBreaks.html  LineBreaks.markdown
markdown/tests/Original/: Links_inline_style.html  Markdown_Documentation_Syntax.html  Ordered_and_unordered_lists.html
(+698 files in other folders)
