cabal-version: 2.4

Name: elm-format
version: 0.8.4

Synopsis:
    A source code formatter for Elm
Description:
    A simple way to format your Elm code according to the official
    style guide.

Homepage:
    https://elm-lang.org

License: BSD-3-Clause
License-file: LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

Category: Build Tool

build-type: Simple

Extra-source-files: README.md

source-repository head
    type:     git
    location: git://github.com/avh4/elm-format.git


common common-options
    default-language: Haskell2010
    ghc-options:
        -threaded -O2 -Wall -Wno-name-shadowing
    default-extensions:
        DeriveFunctor
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables

    hs-source-dirs:
        src
        generated

    other-modules:
        AST.Json
        Build_elm_format
        ElmFormat.Cli
        ElmFormat.CliFlags
        ElmFormat.Messages
        ElmFormat.Version

    build-depends:
        ansi-wl-pprint >= 0.6.8.2 && < 0.7,
        base >= 4.12.0.0 && < 5,
        containers >= 0.6.0.1 && < 0.7,
        json >= 0.10 && < 0.11,
        optparse-applicative >= 0.15.1.0 && < 0.16,
        relude >= 0.7 && < 0.8,
        text >= 1.2.3.1 && < 2,
        avh4-lib,
        elm-format-lib


executable elm-format
    import: common-options
    main-is: Main.hs


test-Suite elm-format-tests
    import: common-options
    type: exitcode-stdio-1.0

    hs-source-dirs: tests
    main-is: Test.hs

    other-modules:
        CommonMarkTests
        Integration.CliTest
        Integration.LiteralTest
        Test.ElmSourceGenerators
        Test.Generators
        Test.Property

    build-depends:
        mtl >= 2.2.2 && < 3,
        tasty >= 1.2 && < 2,
        tasty-hspec >= 1.1.5.1 && < 1.2,
        tasty-hunit >= 0.10.0.1 && < 0.11,
        tasty-quickcheck >= 0.10.1 && < 0.11,
        QuickCheck >= 2.12.6.1 && < 3,
        quickcheck-io >= 0.2.0 && < 0.3,
        bimap >= 0.3.3 && < 0.4,
        cmark >= 0.6 && < 0.7,
        parsec >= 3.1.13.0 && < 4,
        elm-format-test-lib
