cabal-version: 1.12

name:           build-elm-format
version:        0.0.0
build-type:     Simple

executable build-elm-format
  main-is: Main.hs
  other-modules:
      Paths_build_elm_format
      Shakefiles.Dependencies
      Shakefiles.ElmFormat.IntegrationTests
      Shakefiles.Extra
      Shakefiles.Haskell
      Shakefiles.NixBuild
      Shakefiles.Platform
      Shakefiles.Shellcheck
      Shakefiles.Signature
  hs-source-dirs:
      src
  default-extensions:
      LambdaCase
  ghc-options: -rtsopts -threaded -with-rtsopts=-I0
  build-depends:
      base >=4.16.2.0
    , directory >=1.3.6.2
    , shake >=0.19.6 && <0.20
  default-language: Haskell2010
