cabal-version: 2.4

Name: avh4-lib
version: 0.0.0.1

Synopsis:
    Common code for haskell projects

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


common common-options
    ghc-options:
        -O2 -Wall -Wno-name-shadowing

    default-language: Haskell2010

    default-extensions:
        DeriveFunctor
        MultiParamTypeClasses
        LambdaCase
        OverloadedStrings
        ScopedTypeVariables

    hs-source-dirs:
        src

    build-depends:
        ansi-terminal >= 0.11 && < 0.12,
        ansi-wl-pprint >= 0.6.9 && < 0.7,
        array >= 0.5.4.0 && < 0.6,
        base >= 4.12.0.0 && < 5,
        bimap >= 0.4.0 && < 0.5,
        binary >= 0.8.9.0 && < 0.9,
        bytestring >= 0.11.1.0 && < 0.12,
        containers >= 0.6.5.1 && < 0.7,
        directory >= 1.3.7.0 && < 2,
        filepath >= 1.4.2.1 && < 2,
        mtl >= 2.2.2 && < 3,
        process >= 1.6.13.2 && < 2,
        relude >= 1.0.0.1 && < 1.1,
        text >= 1.2.3.1 && < 2


library
    import: common-options

    exposed-modules:
        CommandLine.Filesystem
        CommandLine.World
        CommandLine.World.IO
        Data.Coapplicative
        Data.Either.Extra
        Data.Indexed
        Data.List.Extra
        Data.ReversedList
        Data.Text.Extra
        Elm.Utils
        Regex


test-suite al-tests
    import: common-options
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Tests.hs

    other-modules:
        CommandLine.Filesystem
        CommandLine.World
        CommandLine.World.IO
        Data.Coapplicative
        Data.Either.Extra
        Data.Indexed
        Data.List.Extra
        Data.ReversedList
        Data.Text.Extra
        Elm.Utils
        Regex

    other-modules:
        Data.List.ExtraTest
        Data.Text.ExtraTest

    build-depends:
        tasty >= 1.2 && < 2,
        tasty-hspec >= 1.1.5.1 && < 1.2,
        tasty-hunit >= 0.10.0.1 && < 0.11

    build-tool-depends:
        tasty-discover:tasty-discover >= 4.2.1 && < 5
