cabal-version: 2.4

Name: avh4-lib
version: 0.0.0.1

Synopsis:
    Common code for haskell projects

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


common common-options
    default-language: Haskell2010
    ghc-options:
        -O2
        -Wall
        -Wcompat
        -Wredundant-constraints
        -Wno-name-shadowing
        -Werror=inaccessible-code
        -Werror=missing-home-modules
        -Werror=overflowed-literals
        -Werror=overlapping-patterns
    default-extensions:
        ApplicativeDo
        DataKinds
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        TypeFamilies

    hs-source-dirs:
        src

    build-depends:
        ansi-terminal >= 0.11 && < 0.12,
        ansi-wl-pprint >= 0.6.9 && < 0.7,
        array >= 0.5.4.0 && < 0.6,
        base >= 4.15.0.0 && < 5,
        bimap >= 0.4.0 && < 0.5,
        binary >= 0.8.9.0 && < 0.9,
        bytestring >= 0.10.12.1 && < 0.12,
        containers >= 0.6.5.1 && < 0.7,
        directory >= 1.3.7.0 && < 2,
        filepath >= 1.4.2.1 && < 2,
        mtl >= 2.2.2 && < 3,
        process >= 1.6.13.2 && < 2,
        relude >= 1.0.0.1 && < 1.1,
        text >= 1.2.5.0 && < 2


library
    import: common-options

    exposed-modules:
        CommandLine.Filesystem
        CommandLine.World
        CommandLine.World.IO
        Data.Coapplicative
        Data.Either.Extra
        Data.Fix
        Data.Indexed
        Data.List.Extra
        Data.ReversedList
        Data.Text.Extra
        Elm.Utils
        Regex


test-suite al-tests
    import: common-options
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        CommandLine.Filesystem
        CommandLine.World
        CommandLine.World.IO
        Data.Coapplicative
        Data.Either.Extra
        Data.Fix
        Data.Indexed
        Data.List.Extra
        Data.ReversedList
        Data.Text.Extra
        Elm.Utils
        Regex

    other-modules:
        Data.Either.ExtraSpec
        Data.List.ExtraSpec
        Data.Text.ExtraSpec

    build-depends:
        hspec >= 2.7.10 && < 3

    build-tool-depends:
        hspec-discover:hspec-discover >= 2.7.10 && < 3
