cabal-version: 2.4

Name: elm-format-lib
version: 0.0.0.1

Synopsis:
    Common code used by elm-format and elm-refactor

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


common common-options
    default-language: Haskell2010
    ghc-options:
        -O2
        -Wall
        -Wcompat
        -Wredundant-constraints
        -Wno-name-shadowing
        -Werror=inaccessible-code
        -Werror=missing-home-modules
        -Werror=overflowed-literals
        -Werror=overlapping-patterns
    default-extensions:
        ApplicativeDo
        DataKinds
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        TypeFamilies

    hs-source-dirs:
        src

    other-modules:
        AST.Helpers
        Data.Utf8
        Elm.String
        ElmFormat.AST.BinaryOperatorPrecedence
        ElmFormat.AST.PatternMatching
        ElmFormat.AST.PublicAST.Comment
        ElmFormat.AST.PublicAST.Config
        ElmFormat.AST.PublicAST.Core
        ElmFormat.AST.PublicAST.Expression
        ElmFormat.AST.PublicAST.MaybeF
        ElmFormat.AST.PublicAST.Module
        ElmFormat.AST.PublicAST.Pattern
        ElmFormat.AST.PublicAST.Reference
        ElmFormat.AST.PublicAST.Type
        ElmFormat.Render.Box
        ElmFormat.Render.ElmStructure
        Parse.Binop
        Parse.Comments
        Parse.Common
        Parse.Declaration
        Parse.Expression
        Parse.Helpers
        Parse.IParser
        Parse.Literal
        Parse.Module
        Parse.Number
        Parse.Parse
        Parse.ParsecAdapter
        Parse.Pattern
        Parse.Primitives
        Parse.State
        Parse.String
        Parse.Type
        Parse.Variable
        Parse.Whitespace
        Text.PrettyPrint.Avh4.Block
        Text.PrettyPrint.Avh4.Indent

    build-depends:
        aeson >= 2.0.3.0 && < 2.1,
        ansi-terminal >= 0.11 && < 0.12,
        ansi-wl-pprint >= 0.6.9 && < 0.7,
        array >= 0.5.4.0 && < 0.6,
        base >= 4.15.0.0 && < 5,
        bimap >= 0.4.0 && < 0.5,
        binary >= 0.8.9.0 && < 0.9,
        bytestring >= 0.10.12.1 && < 0.12,
        containers >= 0.6.5.1 && < 0.7,
        directory >= 1.3.7.0 && < 2,
        filepath >= 1.4.2.1 && < 2,
        ghc-prim >= 0.5.2,
        mtl >= 2.2.2 && < 3,
        optparse-applicative >= 0.16.1.0 && < 0.17,
        process >= 1.6.13.2 && < 2,
        relude >= 1.0.0.1 && < 1.1,
        text >= 1.2.5.0 && < 2,
        avh4-lib,
        elm-format-markdown


library
    import: common-options

    exposed-modules:
        AST.MatchReferences
        AST.Structure
        AST.V0_16
        CommandLine.InfoFormatter
        CommandLine.Program
        CommandLine.ResolveFiles
        CommandLine.TransformFiles
        ElmFormat.AST.TransformChain
        ElmFormat.AST.PublicAST
        ElmFormat.AST.Shared
        ElmFormat.ImportInfo
        ElmFormat.KnownContents
        ElmFormat.Normalize
        ElmFormat.Parse
        ElmFormat.Render.Markdown
        ElmFormat.Render.Text
        ElmVersion
        Parse.Markdown
        Reporting.Annotation
        Reporting.Error.Syntax
        Reporting.Result


test-suite efl-tests
    import: common-options
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        AST.MatchReferences
        AST.Structure
        AST.V0_16
        CommandLine.InfoFormatter
        ElmFormat.AST.TransformChain
        ElmFormat.AST.PublicAST
        ElmFormat.AST.Shared
        ElmFormat.ImportInfo
        ElmFormat.KnownContents
        ElmFormat.Normalize
        ElmFormat.Parse
        ElmFormat.Render.Markdown
        ElmFormat.Render.Text
        ElmVersion
        Parse.Markdown
        Reporting.Annotation
        Reporting.Error.Syntax
        Reporting.Result

    other-modules:
        AST.MatchReferencesSpec
        ElmFormat.AST.BinaryOperatorPrecedenceSpec
        ElmFormat.ImportInfoSpec
        ElmFormat.NormalizeSpec
        ElmFormat.Render.ElmStructureSpec
        Parse.ExpressionSpec
        Parse.HelpersSpec
        Parse.LiteralSpec
        Parse.PatternSpec
        Parse.TestHelpers
        Parse.TestHelpersSpec
        Parse.TypeSpec
        Text.PrettyPrint.Avh4.BlockSpec
        Text.PrettyPrint.Avh4.IndentSpec

    build-depends:
        split >= 0.2.3.4 && < 0.3,
        hspec >= 2.7.10 && < 3,
        avh4-lib,
        elm-format-test-lib

    build-tool-depends:
        hspec-discover:hspec-discover >= 2.7.10 && < 3
