cabal-version: 2.4

Name: elm-format-markdown
version: 0.0.0.1

Synopsis:
    Markdown parsing for Elm documentation comments

License: BSD-3-Clause
License-file: LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


common common-options
    default-language: Haskell2010
    ghc-options:
        -O2
        -Wall
        -Wcompat
        -Wredundant-constraints
        -Wno-name-shadowing
        -Werror=inaccessible-code
        -Werror=missing-home-modules
        -Werror=overflowed-literals
        -Werror=overlapping-patterns

    default-extensions:
        ApplicativeDo
        DataKinds
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        TypeFamilies

    hs-source-dirs: .

    build-depends:
        base >= 4.15.0.0 && < 5,
        containers >= 0.6.5.1 && < 0.7,
        mtl >= 2.2.2 && < 3,
        text >= 1.2.5.0 && < 2

library
    import: common-options

    exposed-modules:
        Cheapskate.Inlines
        Cheapskate.Parse
        Cheapskate.ParserCombinators
        Cheapskate.Types
        Cheapskate.Util
