cabal-version: 2.4

Name: elm-format-test-lib
version: 0.0.0.1

Synopsis:
    Test helpers used by elm-format-tests and elm-refactor-tests

License: BSD-3-Clause
License-file: ../LICENSE

Author:     Aaron VonderHaar
Maintainer: gruen0aermel@gmail.com
Copyright:  See https://github.com/avh4/elm-format/blob/master/LICENSE

build-type: Simple


common common-options
    default-language: Haskell2010
    ghc-options:
        -O2
        -Wall
        -Wcompat
        -Wredundant-constraints
        -Wno-name-shadowing
        -Werror=inaccessible-code
        -Werror=missing-home-modules
        -Werror=overflowed-literals
        -Werror=overlapping-patterns
    default-extensions:
        ApplicativeDo
        DataKinds
        DeriveFoldable
        DeriveFunctor
        DeriveTraversable
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        PolyKinds
        ScopedTypeVariables
        TypeApplications
        TypeFamilies

    hs-source-dirs: src

    other-modules:

    build-depends:
        base >= 4.15.0.0 && < 5,
        bytestring >= 0.11.2.0 && < 0.12,
        containers >= 0.6.5.1 && < 0.7,
        filepath >= 1.4.2.1 && < 1.5,
        hspec >= 2.7.10 && < 3,
        hspec-core >= 2.7.10 && < 3,
        hspec-golden >= 0.1.0.3 && < 0.2,
        microlens-platform >= 0.4.2.1 && < 0.5,
        mtl >= 2.2.2 && < 3,
        split >= 0.2.3.4 && < 0.3,
        text >= 1.2.5.0 && < 2,
        avh4-lib


library
    import: common-options

    exposed-modules:
        CommandLine.TestWorld
        Data.FileTree
        TestWorld.Stdio


test-suite elm-format-test-lib-tests
    import: common-options
    type: exitcode-stdio-1.0

    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        Data.FileTree
        Data.FileTreeSpec
        TestWorld.Stdio

    build-tool-depends:
        hspec-discover:hspec-discover >= 2.7.10 && < 3
